--- a/doc/latex/gnutls.tex
+++ b/doc/latex/gnutls.tex
@@ -1,6 +1,7 @@
-\documentclass[letterpaper,10pt]{book}
+\documentclass[fontsize=10pt,twoside,openright]{scrbook}
 \bibliographystyle{plain}
 
+\usepackage[paperwidth=18.91cm,paperheight=24.589cm,twoside,bindingoffset=9mm,outer=2.2cm,inner=1cm,top=2.6cm,bottom=2.5cm]{geometry}
 \usepackage{fancyhdr}
 \usepackage{graphicx}
 \usepackage{makeidx}
@@ -15,7 +16,6 @@
 \usepackage{listings}
 \usepackage{xcolor}
 \usepackage[greek,english]{babel}%for euro sign
-
 
 \hypersetup{
     colorlinks,%
