--- a/doc/cha-internals.texi
+++ b/doc/cha-internals.texi
@@ -12,7 +12,6 @@ happens inside the black box.
 * TLS Handshake Protocol::
 * TLS Authentication Methods::
 * TLS Extension Handling::
-* Certificate Handling::
 * Cryptographic Backend::
 @end menu
 
@@ -67,19 +66,39 @@ certificate ciphersuite. We illustrate the idea in @ref{fig:gnutls-handshake-seq
 In @acronym{GnuTLS} authentication methods can be implemented quite
 easily.  Since the required changes to add a new authentication method
 affect only the handshake protocol, a simple interface is used. An
-authentication method needs only to implement the functions as seen in
-@ref{fig:gnutls-mod-auth}.
-The functions that need to be implemented are the ones responsible for
-interpreting the handshake protocol messages. It is common for such
+authentication method needs to implement the functions shown below.
+
+@verbatim
+typedef struct 
+{
+  const char *name;             /* null terminated */
+  int (*gnutls_generate_server_certificate) (gnutls_session_t, gnutls_buffer_st*);
+  int (*gnutls_generate_client_certificate) (gnutls_session_t, gnutls_buffer_st*);
+  int (*gnutls_generate_server_kx) (gnutls_session_t, gnutls_buffer_st*);
+  int (*gnutls_generate_client_kx) (gnutls_session_t, gnutls_buffer_st*);
+  int (*gnutls_generate_client_cert_vrfy) (gnutls_session_t, gnutls_buffer_st *);
+  int (*gnutls_generate_server_certificate_request) (gnutls_session_t,
+                                                     gnutls_buffer_st *);
+
+  int (*gnutls_process_server_certificate) (gnutls_session_t, opaque *,
+                                            size_t);
+  int (*gnutls_process_client_certificate) (gnutls_session_t, opaque *,
+                                            size_t);
+  int (*gnutls_process_server_kx) (gnutls_session_t, opaque *, size_t);
+  int (*gnutls_process_client_kx) (gnutls_session_t, opaque *, size_t);
+  int (*gnutls_process_client_cert_vrfy) (gnutls_session_t, opaque *, size_t);
+  int (*gnutls_process_server_certificate_request) (gnutls_session_t,
+                                                    opaque *, size_t);
+} mod_auth_st;
+@end verbatim
+
+Those functions are responsible for the
+interpretation of the handshake protocol messages. It is common for such
 functions to read data from one or more @code{credentials_t}
 structures@footnote{such as the
 @code{gnutls_certificate_credentials_t} structures} and write data,
 such as certificates, usernames etc. to @code{auth_info_t} structures.
 
-@float Figure,fig:gnutls-mod-auth
-@image{gnutls-modauth,12cm}
-@caption{GnuTLS authentication method structure.}
-@end float
 
 Simple examples of existing authentication methods can be seen in
 @code{auth_psk.c} for PSK ciphersuites and @code{auth_srp.c} for SRP
@@ -90,21 +109,24 @@ its pointers has to be registered in @code{gnutls_algorithms.c} in the
 @node TLS Extension Handling
 @section TLS Extension Handling
 As with authentication methods, the TLS extensions handlers can be
-implemented using the interface shown in @ref{fig:gnutls-ext}.
+implemented using the interface shown below.
 
-@float Figure,fig:gnutls-ext
-@image{gnutls-extensions,12cm}
-@caption{GnuTLS extensions structure.}
-@end float
+@verbatim
+typedef int (*gnutls_ext_recv_func) (gnutls_session_t session,
+                                     const unsigned char *data, size_t len);
+typedef int (*gnutls_ext_send_func) (gnutls_session_t session,
+                                     gnutls_buffer_st *extdata);
+@end verbatim
 
 Here there are two functions, one for receiving the extension data
 and one for sending. These functions have to check internally whether
 they operate in client or server side. 
 
 A simple example of an extension handler can be seen in
-@code{ext_srp.c} After implementing these functions, together with the
-extension number they handle, they have to be registered in
-@code{gnutls_extensions.c} in the @code{_gnutls_extensions} structure.
+@code{ext/\-srp.c} in GnuTLS' source code. After implementing these functions, 
+together with the extension number they handle, they have to be registered 
+using @funcintref{_gnutls_ext_register} in
+@code{gnutls_extensions.c} typically within @funcintref{_gnutls_ext_init}.
 
 @subsection Adding a New TLS Extension
 
@@ -170,7 +192,7 @@ A typical entry would be:
 #endif
 @end example
 
-Most likely you'll need to add an @code{#include "ext_foobar.h"}, that
+Most likely you'll need to add an @code{#include "ext/\-foobar.h"}, that
 will contain something like
 like:
 @example
@@ -196,23 +218,21 @@ will be called to deinitialize the extension's private parameters, if any.
 Note that the conditional @code{ENABLE_FOOBAR} definition should only be 
 used if step 1 with the @code{configure} options has taken place.
 
-@subsubsection Add new files @code{ext_foobar.c} and @code{ext_foobar.h} that implement the extension.
+@subsubsection Add new files @code{ext/\-foobar.c} and @code{ext/\-foobar.h} that implement the extension.
 
 The functions you are responsible to add are those mentioned in the
 previous step.  As a starter, you could add this:
 
 @example
 int
-_foobar_recv_params (gnutls_session_t session,
-                            const opaque * data,
-                            size_t data_size)
+_foobar_recv_params (gnutls_session_t session, const opaque * data,
+                     size_t data_size)
 @{
   return 0;
 @}
 
 int
-_foobar_send_params (gnutls_session_t session,
-                            gnutls_buffer_st* data)
+_foobar_send_params (gnutls_session_t session, gnutls_buffer_st* data)
 @{
   return 0;
 @}
@@ -232,30 +252,32 @@ _foobar_unpack (gnutls_buffer_st * ps, extension_priv_data_t * epriv)
 @}
 @end example
 
-The @code{_foobar_recv_params} function is responsible for
+The @funcintref{_foobar_recv_params} function is responsible for
 parsing incoming extension data (both in the client and server).
 
-The @code{_foobar_send_params} function is responsible for
+The @funcintref{_foobar_send_params} function is responsible for
 sending extension data (both in the client and server).
-
-The @code{_foobar_pack} function is responsible for packing
-internal extension data to save them in the session storage.
-
-The @code{_foobar_unpack} function is responsible for
-restoring session data from the session storage.
 
 If you receive length fields that doesn't match, return
 @code{GNUTLS_E_\-UNEXPECTED_\-PACKET_\-LENGTH}.  If you receive invalid
 data, return @code{GNUTLS_E_\-RECEIVED_\-ILLEGAL_\-PARAMETER}.  You can use
-other error codes too.  Return 0 on success.
+other error codes from the list in @ref{Error codes}.  Return 0 on success.
 
-The function could store some information in the @code{session}
-variable for later usage. That can be done using the functions 
-@code{_gnutls_ext_\-set_session_\-data} and
-@code{_gnutls_ext_\-get_session_\-data}. You can check simple examples
-at @code{ext_\-max_\-record.c} and @code{ext_\-server_\-name.c} extensions.
+An extension typically stores private information in the @code{session}
+data for later usage. That can be done using the functions 
+@funcintref{_gnutls_ext_set_session_data} and
+@funcintref{_gnutls_ext_get_session_data}. You can check simple examples
+at @code{ext/\-max_\-record.c} and @code{ext/\-server_\-name.c} extensions.
+That private information can be saved and restored across session 
+resumption if the following functions are set:
 
-Recall that both the client and server both send and receives
+The @funcintref{_foobar_pack} function is responsible for packing
+internal extension data to save them in the session resumption storage.
+
+The @funcintref{_foobar_unpack} function is responsible for
+restoring session data from the session resumption storage.
+
+Recall that both the client and server, send and receive
 parameters, and your code most likely will need to do different things
 depending on which mode it is in.  It may be useful to make this
 distinction explicit in the code.  Thus, for example, a better
@@ -286,34 +308,23 @@ _gnutls_foobar_send_params (gnutls_session_t session,
 
 The functions used would be declared as @code{static} functions, of
 the appropriate prototype, in the same file.
-
-When adding the files, you'll need to add them to @code{Makefile.am}
+When adding the files, you'll need to add them to @code{ext/\-Makefile.am}
 as well, for example:
 
 @example
 if ENABLE_FOOBAR
-COBJECTS += ext_foobar.c
-HFILES += ext_foobar.h
+libgnutls_ext_la_SOURCES += ext/foobar.c ext/foobar.h
 endif
 @end example
 
 @subsubsection Add API functions to enable/disable the extension.
 
-Normally the client will have one API to request use of the extension,
-and setting some extension specific data.  The server will have one
-API to let the library know that it is willing to accept the
-extension, often this is implemented through a callback but it doesn't
-have to.
-
-The APIs need to be added to @code{includes/\-gnutls/\-gnutls.h} or
-@code{includes/\-gnutls/\-extra.h} as appropriate.  It is recommended that
-if you don't have a requirement to use the LGPLv3+ license for your
-extension, that you place your work under the GPLv3+ license and thus
-in the libgnutls-extra library.
-
-You can implement the API function in the @code{ext_foobar.c} file, or
-if that file ends up becoming rather larger, add a
-@code{gnutls_\-foobar.c} file.
+It might be desirable to allow users of the extension to
+request use of the extension, or set extension specific data.  
+This can be implemented by adding extension specific function calls
+that can be added to @code{includes/\-gnutls/\-gnutls.h},
+as long as the LGPLv3+ applies.
+The implementation of the function should lie in the @code{ext/\-foobar.c} file.
 
 To make the API available in the shared library you need to add the
 symbol in @code{lib/\-libgnutls.map} or
@@ -324,25 +335,14 @@ When writing GTK-DOC style documentation for your new APIs, don't
 forget to add @code{Since:} tags to indicate the GnuTLS version the
 API was introduced in.
 
-
-@node Certificate Handling
-@section Certificate Handling
-What is provided by the certificate handling functions
-is summarized in @ref{fig:gnutls-cert-use-case}.
-
-@float Figure,fig:gnutls-cert-use-case
-@image{gnutls-certificate-user-use-case,12cm}
-@caption{GnuTLS certificate subsystem use cases.}
-@end float
-
 @node Cryptographic Backend
 @section Cryptographic Backend
 Today most new processors, either for embedded or desktop systems
 include either instructions  intended to speed up cryptographic operations,
 or a co-processor with cryptographic capabilities. Taking advantage of 
 those is a challenging task for every cryptographic  application or 
-library. Unfortunately the cryptographic libraries that GnuTLS is based 
-on take no advantage of these properties. For this reason GnuTLS handles 
+library. Unfortunately the cryptographic library that GnuTLS is based 
+on takes no advantage of these capabilities. For this reason GnuTLS handles 
 this internally by following a layered approach to accessing
 cryptographic operations as in @ref{fig:crypto-layers}.
 
@@ -352,7 +352,7 @@ cryptographic operations as in @ref{fig:crypto-layers}.
 @end float
 
 The TLS layer uses a cryptographic provider layer, that will in turn either 
-use the default crypto provider - a crypto library, or use an external
+use the default crypto provider -- a software crypto library, or use an external
 crypto provider, if available.
 
 @subsection Cryptographic library layer
@@ -364,7 +364,7 @@ in the future.
 Systems that include a cryptographic co-processor, typically come with
 kernel drivers to utilize the operations from software. For this reason 
 GnuTLS provides a layer where each individual algorithm used can be replaced
-by another implementation, i.e. the one provided by the driver. The
+by another implementation, i.e., the one provided by the driver. The
 FreeBSD, OpenBSD and Linux kernels@footnote{Check @url{http://home.gna.org/cryptodev-linux/} 
 for the Linux kernel implementation of @code{/dev/crypto}.} include already 
 a number of hardware assisted implementations, and also provide an interface 
@@ -372,7 +372,7 @@ to access them, called @code{/dev/crypto}.
 GnuTLS will take advantage of this interface if compiled with special
 options. That is because in most systems where hardware-assisted 
 cryptographic operations are not available, using this interface might 
-actually reduce performance.
+actually harm performance.
 
 In systems that include cryptographic instructions with the CPU's
 instructions set, using the kernel interface will introduce an
@@ -381,15 +381,13 @@ found in popular processors such as the AES-NI instruction set.
 This is achieved using a mechanism that
 overrides parts of crypto backend at runtime, once the cryptographic
 instructions are detected.
-
-The next section discusses the runtime possibility. The API
-available for this functionality is in @code{gnutls/crypto.h} header
-file.
+The next section discusses the runtime possibility. 
 
 @subsubsection Override specific algorithms
 When an optimized implementation of a single algorithm is available,
 say a hardware assisted version of @acronym{AES-CBC} then the
-following functions can be used to register those algorithms.
+following (internal) functions, from @code{crypto-backend.h}, can 
+be used to register those algorithms.
 
 @itemize
 
