--- a/doc/latex/gnutls.bib
+++ b/doc/latex/gnutls.bib
@@ -288,3 +288,12 @@
 	isbn = "0-13-490012-X"
 }
 
+@book{ANDERSON,
+ author = {Ross J. Anderson},
+ title = {Security Engineering: A Guide to Building Dependable Distributed Systems},
+ year = {2001},
+ isbn = {0471389226},
+ edition = {1st},
+ publisher = {John Wiley \& Sons, Inc.},
+ address = {New York, NY, USA},
+} 
