--- a/doc/cha-bib.texi
+++ b/doc/cha-bib.texi
@@ -165,4 +165,8 @@ November 2007, available from @url{http://www.ietf.org/rfc/rfc5056}.
 J. Altman, N. Williams, L. Zhu, "Channel Bindings for TLS", July 2010,
 available from @url{http://www.ietf.org/rfc/rfc5929}.
 
+@item @anchor{ANDERSON}[ANDERSON]
+R. J. Anderson, "Security Engineering: A Guide to Building Dependable Distributed Systems", 
+John Wiley \& Sons, Inc., 2001.
+
 @end table
