do not escape \#

--- a/doc/manpages/gnutls-cli.1
+++ b/doc/manpages/gnutls-cli.1
@@ -123,14 +123,14 @@ SRP password to use.
 .IP "\-\-srpusername \fINAME\fR"
 SRP username to use.
 .IP "\-\-x509cafile \fIFILE\fR"
-Certificate file to use. This option accepts PKCS \#11 URLs such as
-pkcs11:token=Root%20CA%20Certificates;serial=1%3AROOTS%3ADEFAULT;model=1%2E0;manufacturer=Gnome%20Keyring
+Certificate file to use. This option accepts PKCS #11 URLs such as
+"pkcs11:token=xxx"
 .IP "\-\-x509certfile \fIFILE\fR"
-X.509 Certificate file to use, or a PKCS \#11 URL.
+X.509 Certificate file to use, or a PKCS #11 URL.
 .IP "\-\-x509fmtder"
 Use DER format for certificates
 .IP "\-\-x509keyfile \fIFILE\fR"
-X.509 key file or PKCS \#11 URL to use.
+X.509 key file or PKCS #11 URL to use.
 .IP "\-\-x509crlfile \fIFILE\fR"
 X.509 CRL file to use.
 .IP "\-\-pskusername \fINAME\fR"
